--- a/apps/agent/package.json
+++ b/apps/agent/package.json
@@ -3,8 +3,20 @@
     "version": "1.0.0",
     "private": true,
     "scripts": {
-        "dev": "ts-node-dev src/index.ts",
+        "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
         "build": "tsc",
-        "start": "node dist/index.js"
+        "start": "node dist/index.js",
+        "playwright:install": "playwright install chromium",
+        "test:playwright": "ts-node test-playwright.ts"
+    },
+    "dependencies": {
+        "playwright": "^1.40.0",
+        "dotenv": "^16.3.1",
+        "axios": "^1.6.2"
+    },
+    "devDependencies": {
+        "@types/node": "^20.10.0",
+        "ts-node-dev": "^2.0.0",
+        "typescript": "^5.9.3"
     }
 }
